arregle campo de direccion dandole un ancho exacto

--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,9 @@
 
 <body>
     <form>
-        <table border="0">
+        <table border="">
             <h1>CONSULTAS</h1>
-            <hr>
+            
             <h2>DATOS PERSONALES</h2>
 
             <tr>
@@ -34,7 +34,7 @@
             </tr>
             <tr>
                 <th>
-                    <input type="text" name="name" class="name" id="name" placeholder="DIRECCION">
+                    <input type="text" name="name" class="name" id="name" placeholder="DIRECCION" style="width: 95%">
                 </th>
             </tr>
             <tr>
